new api payload map/objects
