# openapi.json
@@ -1537,6 +1537,57 @@
           }
         }
       }
+    },
+    "/map/objects": {
+      "post": {
+        "tags": ["Map"],
+        "summary": "Запросить отчет о посещениях",
+        "description": "## Отчет о посещениях\nОтчет, формирующийся на основании данных о посещениях и служебных записках и данных о передвижениях сотрудников.\n| Параметр | Описание |\n| -------- | -------- |\n| `date_from` | Начальная дата отчета |\n| `date_to` | Конечная дата отчета, можно указывать дату наперед, тогда будущие выходы будут отображаться как \"В\" |\n| `division` | Подразделение. Можно указать как division_id, так и полное название подразделение строкой, например \"ПВТ9,ПНИ25\". Подразделение должно быть доступно пользователю. |\n| `counts` | Тип отображения отчета? *'true'* - будет отображаться кол-во выходов, *'false'* - сумма длительности. По умолчанию *'false'*. |\n| `name_ids`, `object_ids` | Альтернативный способ формирования отчета по id сотрудников и подопечных, можно указать вместо или вместе с `division`. Можно указать только `name_ids` или только `object_ids`. |\n",
+        "requestBody": {
+          "description": "Запрос на формирование отчета",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Report"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "## JSON с ключом 'map'. Это HTML код сформированной карты.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "map": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "\"Validation error\" или \"Report error\"",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/ReportError"
+                    },
+                    {
+                      "$ref": "#/components/schemas/ValidationError"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
